--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
     "fs": "0.0.1-security",
     "ganache-cli": "^6.9.1",
     "truffle": "^5.1.30"
+  },
+  "devDependencies": {
+    "ethereumjs-util": "^7.0.2",
+    "ethereumjs-wallet": "^1.0.0",
+    "ethers": "^5.0.3"
   }
 }
